Fix margin right issue
A wrong 15px right margin on navbar inverse class
caused an horizontal scroll.
Particularly disturbing on small devices.
Fixed by forcing margin: 0

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,10 @@ $btn-secondary-color: $brand-primary;
   color: $feltro-title-brackets-color;
 }
 
+.navbar-inverse {
+  margin: 0;
+}
+
 
 .feltro-header{
     background: url(/img/impression/zebraImpScritta70.jpg);  
